--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,21 @@
 /* stylelint-disable-next-line at-rule-no-unknown */
 @source "../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";
 
+@font-face {
+  font-family: "ITC Benguiat Book Regular";
+  src: url("./fonts/ITC Benguiat Book Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+/* @font-face {
+  font-family: "EVA Matisse Classic";
+  src: url("./fonts/EVA-Matisse_Classic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+} */
+
 :root {
   font-family: "Space Grotesk", system-ui, sans-serif;
   color: #ffffff !;
@@ -23,6 +38,15 @@ body {
   min-height: 100vh;
   background-color: #000000;
 }
+
+h1 {
+  font-family: "EVA Matisse Classic", "Space Grotesk", system-ui, sans-serif;
+  font-family: "ITC Benguiat Book Regular", "Space Grotesk", system-ui,
+    sans-serif;
+}
+/* h1 {
+  font-family: "EVA Matisse Classic", "Space Grotesk", system-ui, sans-serif;
+} */
 
 code,
 pre {
